Fixed he figure alignment issue in compare tab of TSC result page when left-sidebar is collapsed and expanded

--- a/src/assets/css/calculator.css
+++ b/src/assets/css/calculator.css
@@ -1581,7 +1581,7 @@ transform: translate(-50% , -50%);
     display: block;
 }
 .eachProgressBarDiv .compareLeftPart .tax-details-each-bars label span{
-padding-right: 8px;
+padding-right: 12px;
 }
 
 .eachProgressBarDiv .compareRightPart .tax-details-each-bars label{
